add files for node and ipfs

--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -1,15 +1,15 @@
 FROM --platform=$BUILDPLATFORM python:3.9-buster AS builder
 
-WORKDIR /
+WORKDIR /hive
 
-COPY requirements.txt /
+COPY requirements.txt /hive
 
 RUN <<EOF
     pip install --upgrade pip
     pip install -r requirements.txt
 EOF
 
-COPY . .
+COPY . /hive/
 
 CMD [ "python3", "manage.py",  "runserver", "--host", "0.0.0.0" ]
 
@@ -21,7 +21,7 @@ RUN <<EOF
 EOF
 
 ENV PYTHONUNBUFFERED 1
-ENV LD_LIBRARY_PATH "/src/utils/did"
+ENV LD_LIBRARY_PATH "/hive/src/utils/did"
 
 EXPOSE 5000
 
