update after push new ipfs and node docker images

--- a/ipfs/docker-compose.yaml
+++ b/ipfs/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
 
   hive-ipfs:
     container_name: hive-ipfs
-    image: hive-ipfs:latest
+    image: trinitytech/hiveipfs:latest
     volumes:
       - ./staging:/export
       - ./data:/data/ipfs
