--- a/.env
+++ b/.env
@@ -29,10 +29,10 @@ PAYMENT_RECEIVING_ADDRESS = 0xB98c051c98D8fB5436fC62fc8a7FdA487a482776
 ## using atlast service or mongodb service
 ATLAS_ENABLED = False
 #MONGODB_URL = mongodb+srv://Fred:<password>@cluster0.tt3yh.mongodb.net
-MONGODB_URL = mongodb://mongodb:27017
+MONGODB_URL = mongodb://hivemongodb:27017
 
 ## IPFS node service
-IPFS_NODE_URL = http://ipfs:5001
+IPFS_NODE_URL = http://hiveipfs:5001
 IPFS_GATEWAY_URL = http://localhost:8080
 
 ENABLE_CORS = True
