--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     container_name: hivemongodb
     image: mongo:4.4.0
     volumes:
-      - ./mongodb:/data/db
+      - ./volumns/mongodb:/data/db
     ports:
       - "27017:27017"
     restart: always
@@ -15,8 +15,8 @@ services:
     container_name: hiveipfs
     image: trinitytech/hiveipfs:latest
     volumes:
-      - ./ipfs/staging:/export
-      - ./ipfs/data:/data/ipfs
+      - ./volumns/ipfs/staging:/export
+      - ./volumns/ipfs/data:/data/ipfs
     ports:
       - "4001:4001"
       - "4001:4001/udp"
@@ -31,7 +31,7 @@ services:
       - hiveipfs
     image: trinitytech/hivenode:latest
     volumes:
-      - ./node/data:/hive/data
+      - ./volumns/node/data:/hive/data
       - ./.env:/hive/.env
     ports:
       - "5000:5000"
